docs: clarify architecture-specific JDK requirements
Document the required JDK per CPU architecture and replace ambiguous JVM option examples.

Refs #6895